# esp32-C3-knob

./: .gitignore  CENTRALIZED_MQTT_ARCHITECTURE.md  CMakeLists.txt  EMONTX3_INTEGRATION.md  HARDWARE_VERIFICATION.md  HOME_KNOB_TOPICS_GUIDE.md  LICENSE  MINI_ARCS_DESIGN.md  MOCK_MODE_GUIDE.md  MQTT_SETUP.md  PEAK_TRACKING_DESIGN.md  PROJECT_STATUS.md  README.md  README_ESP_IDF.md  ROTARY_ENCODER.md  SQUARELINE_INTEGRATION.md  WIFI_SETUP.md  build_log.txt  button_test.cpp  button_test.h  idf_component.yml  lv_conf.h  main_backup_old.txt  platformio.ini  sdkconfig.defaults
archive/: MIGRATION_PLAN.md  PRE_ARRIVAL_CHECKLIST.md  README_NEW.md  RELEASE_SUMMARY.md
bdd/: 01_system_navigation.feature  02_hello_world_screen.feature  03_clock_screen.feature  04_energy_screen.feature  05_weather_screen.feature  06_house_screen.feature  07_settings_screen.feature  08_mqtt_integration.feature  09_bin_collection_management.feature  10_energy_management.feature  11_system_integration.feature  README.md
components/: lv_conf.h
include/: User_Setup.h  lv_conf.h
main/: CMakeLists.txt  main.cpp  main_backup.cpp  mqtt_integration_example.h  wifi_manager.h
main/core/: app_state_manager.cpp  app_state_manager.h  display.cpp  display.h  factory_reset_manager.cpp  factory_reset_manager.h  haptic_feedback_manager.h  hardware.cpp  hardware.h  mqtt_manager.cpp  mqtt_manager.h  mqtt_manager_old.cpp  rotary.cpp  rotary.h  touch_interface_manager.h  wifi_manager.cpp
main/features/clock/: clock_screen.cpp  clock_screen.h
main/features/device_control/: device_control_manager.cpp  device_control_manager.h
main/features/energy/: energy_data_manager.cpp  energy_data_manager.h  energy_screen.cpp  energy_screen.h
main/features/hello_world/: hello_screen.cpp  hello_screen.h
main/features/house/: bin_collection_manager.cpp  bin_collection_manager.h  house_screen.cpp  house_screen.h  motd_manager.cpp  motd_manager.h
main/features/settings/: settings_screen.cpp  settings_screen.h
main/features/weather/: weather_data_manager.cpp  weather_data_manager.h  weather_screen.cpp  weather_screen.h
main/ui/: screen_manager.cpp  screen_manager.h
simulator/: README.md  energy_screen_simulator.c  visual_mockup.py
src/: main.cpp  main_backup.cpp  main_basic.cpp  main_simple.cpp
(+15 files in other folders)
