idf_component_register(SRCS "main.cpp" 
                            "core/wifi_manager.cpp"
                            "core/hardware.cpp"
                            "core/display.cpp"
                            "core/rotary.cpp"
                            "ui/screen_manager.cpp"
                            "features/hello_world/hello_screen.cpp"
                            "features/settings/settings_screen.cpp"
                            "features/clock/clock_screen.cpp"
                            "features/energy/energy_screen.cpp"
                            "features/weather/weather_screen.cpp"
                            "features/house/house_screen.cpp"
                       INCLUDE_DIRS "." "core" "ui" "features"
                       REQUIRES lvgl esp_driver_spi esp_driver_gpio esp_driver_i2c esp_wifi mqtt nvs_flash freertos wifi_provisioning)
