idf_component_register(SRCS "main.cpp" 
                            "core/wifi_manager.cpp"
                            "core/hardware.cpp"
                            "core/display.cpp"
                            "core/rotary.cpp"
                            "core/mqtt_manager.cpp"
                            "core/app_state_manager.cpp"
                            "ui/screen_manager.cpp"
                            "features/hello_world/hello_screen.cpp"
                            "features/settings/settings_screen.cpp"
                            "features/clock/clock_screen.cpp"
                            "features/energy/energy_screen.cpp"
                            "features/energy/energy_data_manager.cpp"
                            "features/weather/weather_screen.cpp"
                            "features/house/house_screen.cpp"
                            "features/house/bin_collection_manager.cpp"
                            "features/house/motd_manager.cpp"
                            "features/device_control/device_control_manager.cpp"
                       INCLUDE_DIRS "." "core" "ui" "features"
                       REQUIRES lvgl esp_driver_spi esp_driver_gpio esp_driver_i2c esp_wifi mqtt nvs_flash freertos wifi_provisioning)
